# rust_kv

./: Cargo.toml  README.md  abi.proto
examples/: client.rs  dummy_server.rs  gen_cert.rs  server.rs  server_with_codec.rs  server_with_sled.rs
src/: client.rs  error.rs  lib.rs  server.rs
src/network/: frame.rs  mod.rs  multiplex.rs  stream.rs  stream_result.rs  tls.rs
src/pb/: mod.rs
src/service/: command_service.rs  mod.rs  topic.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
