[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvc"
path = "src/client.rs"

[[bin]]
name = "kvs"
path = "src/server.rs"

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
dashmap = "4" # 并发 HashMap
http = "0.2" # 我们使用 HTTP status code 所以引入这个类型库
prost = "0.9" # 处理 protobuf 的代码
sled = "0.34"
thiserror = "1" # 错误定义和处理
tokio-util = { version = "0.7.7", features = ["codec","compat"] }
tracing = "0.1" # 日志处理
tokio = { version = "1", features = ["full"] } # 异步网络库
flate2 = "1"
anyhow = "1" # 错误处理
tracing-subscriber = "0.3" # 日志处理
certify = "0.3"
tokio-rustls = "0.22"
rustls-native-certs = "0.5.0"
futures = "0.3"
yamux = "0.9" # yamux 多路复用支持
tokio-stream = "0.1.12"


[dev-dependencies]
async-prost = "0.3" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tempfile = "3"


[build-dependencies]
prost-build = "0.9" # 编译 protobuf
